syntax = "proto3";

package rent;

option go_package = "bike-rental/rent-service/proto/rent";

service RentService {
  rpc StartRent(StartRentRequest) returns (RentResponse);
  rpc EndRent(EndRentRequest) returns (RentResponse);
  rpc GetAvailableBikes(AvailableBikesRequest) returns (BikesList);
  rpc GetRentStats(StatsRequest) returns (StatsResponse);
  rpc AddBike(AddBikeRequest) returns (BikeResponse);
  rpc DeleteBike(DeleteBikeRequest) returns (DeleteBikeResponse);
}

message StartRentRequest {
  string user_id = 1;
  string bike_id = 2;
}

message EndRentRequest {
  string rent_id = 1;
  string user_id = 2;
}

message RentResponse {
  string rent_id = 1;
  string user_id = 2;
  string bike_id = 3;
  string status = 4;
  string message = 5;
  int64 start_time = 6;
  int64 end_time = 7;
}

message AvailableBikesRequest {
  string location = 1;
}

message Bike {
  string id = 1;
  string name = 2;
  string status = 3;
  string location = 4;
}

message BikesList {
  repeated Bike bikes = 1;
}

message StatsRequest {
  string date = 1;
}

message StatsResponse {
  string date = 1;
  int64 total_rents = 2;
  int64 active_rents = 3;
  map<string, int64> location_stats = 4;
}

message AddBikeRequest {
  string name = 1;
  string location = 2;
}

message BikeResponse {
  string id = 1;
  string name = 2;
  string status = 3;
  string location = 4;
  string message = 5;
}

message DeleteBikeRequest {
  string bike_id = 1;
}

message DeleteBikeResponse {
  bool success = 1;
  string message = 2;
}

